
[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "orbo"
version = "0.1.2"
description = "Python SDK for TSETMC"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Mohsen_Ghahremani" }
]

license = { text = "MIT" }

keywords = [
    "tsetmc",
    "iran",
    "stock",
    "options",
    "finance",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]


dependencies = [
    "httpx>=0.28.0",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "pydantic>=2.11.0",
    "jdatetime>=5.0.0",
    "pyarrow>=20.0",

]

[project.urls]
Homepage = "https://github.com/ORBO-ir/ORBO"
Repository = "https://github.com/ORBO-ir/ORBO"
Issues = "https://github.com/ORBO-ir/ORBO/issues"



[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "ruff>=0.12",
    "mypy>=1.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
orbo = [
    "data/*.json",
]
